--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
             <h2 class="section-title">Our Handcrafted Collection</h2>
             <div class="products-grid">
                 <div class="product-card">
-                    <img src="product1.jpg" alt="Handcrafted Ring">
+                    <img src="images/product 1.png" alt="Handcrafted Ring">
                     <div class="product-info">
                         <h3>Artisan Jewelry</h3>
                         <p>Handcrafted rings and jewelry with intricate traditional designs</p>
