--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="product2.jpg" alt="Decorative Candle Holders">
+                    <img src="images/product 2.webp" alt="Decorative Candle Holders">
                     <div class="product-info">
                         <h3>Decorative Candle Holders</h3>
                         <p>Beautiful painted candle holders with traditional motifs</p>
@@ -485,7 +485,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="product4.jpg" alt="Personalized Mugs">
+                    <img src="images/product 4.jpg" alt="Personalized Mugs">
                     <div class="product-info">
                         <h3>Personalized Mugs</h3>
                         <p>Custom ceramic mugs with names and traditional Indian artwork</p>
