--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="product3.jpg" alt="Traditional Lamp">
+                    <img src="images/product 3.webp" alt="Traditional Lamp">
                     <div class="product-info">
                         <h3>Cultural Lamps</h3>
                         <p>Handpainted lamps featuring traditional Indian art and mythology</p>
@@ -492,14 +492,14 @@
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="product5.jpg" alt="Custom Dolls">
+                    <img src="images/product 5.jpg" alt="Custom Dolls">
                     <div class="product-info">
                         <h3>Custom Portrait Dolls</h3>
                         <p>Handcrafted dolls made to resemble your loved ones</p>
                     </div>
                 </div>
                 <div class="product-card">
-                    <img src="product6.jpg" alt="Woven Furniture">
+                    <img src="images/product 6.webp" alt="Woven Furniture">
                     <div class="product-info">
                         <h3>Artisan Furniture</h3>
                         <p>Traditional woven furniture pieces with geometric patterns</p>
