--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <nav>
         <div class="container">
             <div class="logo">
-                <img src="logo.png" alt="CraftlyDrops Logo">
+                <img src="images/logo.jpeg" alt="CraftlyDrops Logo">
                 <h1>CraftlyDrops</h1>
             </div>
             <ul class="nav-links">
