--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Get In Touch For Customization</h2>
+            <h2 class="section-title">Get In Touch</h2>
             <form class="contact-form" onsubmit="handleSubmit(event)">
                 <div class="form-group">
                     <label for="name">Name</label>
